@@ -3,6 +3,11 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.20rc1
 
+	- Added a new ppdSetConformance() function to set the
+	  conformance requirements for PPD files. Currently only
+	  two levels are defined, PPD_CONFORM_RELAXED and
+	  PPD_CONFORM_STRICT, and the default is the relaxed
+	  level (STR #212)
 	- The IPP backend did not correctly execute the
 	  pictwpstops filter on OSX (STR #210)
 	- The LPD backend did not set the banner class when the
